// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ULThemeLogo matches snapshot with custom className 1`] = `
<div>
  <div
    class="flex flex-wrap justify-widget-logo snapshot-class"
  >
    <span
      class="relative flex shrink-0 overflow-hidden size-auto rounded-none"
      data-slot="avatar"
    />
  </div>
</div>
`;

exports[`ULThemeLogo renders correctly with default props 1`] = `
<div>
  <div
    class="flex flex-wrap justify-widget-logo"
  >
    <span
      class="relative flex shrink-0 overflow-hidden size-auto rounded-none"
      data-slot="avatar"
    />
  </div>
</div>
`;
